--- a/lab02/part5/db/part5.lpc.html
+++ b/lab02/part5/db/part5.lpc.html
@@ -16,12 +16,44 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
-<TD >H0</TD>
+<TD >M0|stage2</TD>
 <TD >2</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
-<TD >21</TD>
+<TD >7</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >M0|stage1</TD>
+<TD >2</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >7</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >M0|stage0</TD>
+<TD >2</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >7</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -37,7 +69,7 @@
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
-<TD >2</TD>
+<TD >21</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
